--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 <p>Hobby:<span style="font-family:arial;color:blue;"><i> Videogames</i></span></p>
 <p>Facebook:<a href="https://www.facebook.com">here</a>
 <h2>My favorite movie star: Leonardo Dicaprio</h2>
-<img src="D:\Grad_School\CS550_Database_Concepts\Labs\Lab1\leonardo_dicaprio.jpg">
+<img src="leonardo_dicaprio.jpg">
 </body>
 </html>
 
